button on left with a little spacing around it

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -17,7 +17,9 @@ p {
 	margin-bottom: 2px;
 }
 .kugar {
-	float: right;
+	float: left;
+          margin-right: 12px;
+         margin-bottom: 4px;
 }
 
 -->
