some more cosmetics for this evening, is line 52:  "</div>" in url-display-viewitem.cpp not redundant? dunno, it works.

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -7,7 +7,7 @@
 
 .item {
 	margin-bottom: 2px;
-	margin-left:4px;
+	margin-left:180px;
 }
 h4 {
 	margin-bottom: 2px;
@@ -17,9 +17,12 @@ p {
 	margin-bottom: 2px;
 }
 .kugar {
-	float: left;
-          margin-right: 12px;
-         margin-bottom: 4px;
+	float: right;
+    margin-right: 20px;
+    margin-bottom: 0px;
+}
+.url {
+    color: #0e774a;
 }
 
 -->
