cosmetics in the early morning. TBD: kugar should open always browser.

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -21,6 +21,13 @@ p {
     margin-right: 20px;
     margin-bottom: 0px;
 }
+.thumb {
+	float: left;
+	margin-right: 20px;
+    margin-bottom: 2px;
+    margin-top: 4px;
+    margin-left: 2px;
+}
 .url {
     color: #0e774a;
 }
