--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -8,22 +8,29 @@
 .item {
 	margin-bottom: 2px;
 	margin-left:2px;
+          border-top: 0px;
+          border-left: 0px;
+          border-right: 0px;
+          border-bottom: 2px;
+          padding: 0px;
 }
-h4 {
+h4{
+          margin-top:2px;
 	margin-bottom: 2px;
+          font-size:normal;
 }
 p {
 	margin-top: 0px;
-	margin-bottom: 2px;
+	margin-bottom: 0px;
 }
 .kugar {
-	float: right;
-    margin-right: 20px;
+	float: left;
+    margin-right: 8px;
     margin-bottom: 0px;
 }
 .thumb {
 	float: left;
-	margin-right: 20px;
+	margin-right: 8px;
     margin-bottom: 2px;
     margin-top: 4px;
     margin-left: 2px;
