more systematic formatting, differentiated link-click handling

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -6,7 +6,7 @@
 <!--
 
 .item {
-	margin-bottom: 2px;
+	margin-bottom: 12px;
 	margin-left:2px;
           border-top: 0px;
           border-left: 0px;
@@ -14,7 +14,8 @@
           border-bottom: 2px;
           padding: 0px;
 }
-h4{
+
+.title {
           margin-top:2px;
 	margin-bottom: 2px;
           font-size:normal;
@@ -25,9 +26,26 @@ p {
 }
 .kugar {
 	float: left;
-    margin-right: 8px;
+    margin-right: 4px;
     margin-bottom: 0px;
 }
+a.kougar {
+   text-decoration: none;
+}
+
+a.title {
+  text-decoration:underline;
+  font-size:105%;
+  font-style:normal;
+}
+
+a.flash {
+  text-decoration: none;
+  color: red;
+  font-size:smaller;
+  font-style:normal;
+}
+
 .thumb {
 	float: left;
 	margin-right: 8px;
@@ -35,8 +53,30 @@ p {
     margin-top: 4px;
     margin-left: 2px;
 }
+
+a.thumb {
+   text-decoration: none;
+  font-size:smaller;
+}
+
 .url {
     color: #0e774a;
+   font-size:smaller;
+}
+a.url {
+    color: #0e774a;
+   text-decoration: none;
+  font-size:smaller;
+}
+
+a,keywords {
+  text-decoration: none;
+  font-size:smaller;
+  font-style:italic;
+}
+
+.timestamp {
+  font-size:smaller;
 }
 
 -->
