make the first bullet the same size as the second bullet.

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -69,7 +69,7 @@ a.url {
   font-size:smaller;
 }
 
-a,keywords {
+a.keywords {
   text-decoration: none;
   font-size:smaller;
   font-style:italic;
