suggestion to not crowed the icons, if not appreciated, revert.

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -25,9 +25,7 @@ p {
 	margin-bottom: 0px;
 }
 .kugar {
-	float: left;
-    margin-right: 4px;
-    margin-bottom: 0px;
+    margin-top: 0px;
 }
 a.kougar {
    text-decoration: none;
