plugins with one builtin (translate)

--- a/html/url-display-view.html
+++ b/html/url-display-view.html
@@ -77,8 +77,17 @@ a.keywords {
   font-size:smaller;
 }
 
+.translate {
+  font-size:smaller;
+}
+
+a.translate {
+  text-decoration: none;
+}
+
 -->
 </style>
+%%HEAD_JAVASCRIPT%%
 </head>
 <body>
 %1
