icon for settins faq

--- a/html/settings_faq.html
+++ b/html/settings_faq.html
@@ -179,7 +179,7 @@
   </tr>
   <tr>
     <td class="Stil3">urldisplay/slowperiod</td>
-    <td class="Stil3">Slowperoid defines the time, to slow the period down. </td>
+    <td class="Stil3">Slowperoid defines <span dir="ltr" id=":1jq">the refresh time for the url counter.</span></td>
   </tr>
 </table>
 </body>
