--- a/html/settings_faq.html
+++ b/html/settings_faq.html
@@ -16,207 +16,166 @@
 </head>
 
 <body>
-<pre class="Stil1"><img src="images/arado-logo-colo-32.png" width="32" height="32" /> Description of the settings values.
-<span class="Stil2">This table describes the function settings values.</span>  </pre>
-<table width="919" border="1">
+<pre class="Stil1">Description of the settings values.</pre>
+<table width="778" border="1">
   <tr>
     <td class="Stil3">NAME</td>
-    <td class="Stil3">DEFAULT VALUE </td>
     <td class="Stil3">DESCRIPTION</td>
   </tr>
   <tr>
     <td width="194" class="Stil3">database/feedbase</td>
-    <td width="135" class="Stil3">&nbsp;</td>
     <td width="568" class="Stil3">Read your feeds with Arado Websearch. The feed URLs, which send the news items, are saved in this database: feedbase.sql. The settings value shows you the path, where the feedbase.sql file is located. You can edit this database by using the NewsTicker Tab and check the &quot;Edit&quot; checkbox. A new table opens with the RSS/Atom Feed-URLs,</td>
   </tr>
   <tr>
     <td class="Stil3">database/ipbase</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">To network your devices with Arado Websearch you need to save the IP-Adresses of the other devices. This is done in the database: ipbase.sql. The settings value shows you the path, where the ipbase.sql is located. </td>
   </tr>
   <tr>
     <td class="Stil3">database/urlbase</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">All URLs of your Arado Websearch are stored in the file: urlbase.sql. The settings value shows you the path, where the urlbase is located. </td>
   </tr>
   <tr>
     <td class="Stil3">engine_peersweep/maxage</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Each device, which connects will be deleted after the maximum age of x days. Default is 9 days. Please run Arado Websearch at least once per Week or better check once per day your RSS News Items in the Newsticker Tab or let it run constantly, so that you show to other devices, you are active. Otherwise they will remove you after the period of maxage not beeing online. </td>
   </tr>
   <tr>
     <td class="Stil3">engine_peersweep/period</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">The peerseep peroid defines how often the devices are checked, if they are outdated or not. Currently all IP-Addresses are checked each hour, if they are offline for a longer time, adjusted by the value &quot;maxage&quot;. </td>
   </tr>
   <tr>
     <td class="Stil3">engine_rss/lastpolled </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">This value shows the Feed-Nickname, which hass been polled the last time. </td>
   </tr>
   <tr>
     <td class="Stil3">engine_rss/pollperiod</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3"><p>Pollperoid is set to a default to poll each 30 minutes a new feed. If you have Arado Websearch contantly running, all your entered feeds will be queried. The value is seconds, so if you set the pollperiod to 60 and you have 60 feeds in your feedbase.sql, each feed is polled once per hour. Please make sure, to ask a RSS feed not more often than each 20 minutes. </p>    </td>
   </tr>
   <tr>
     <td class="Stil3">engine_policy/dailycache</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">The daiylcache saved the URLs, you just got in from other devices, and checks, if they are already given. It&acute;s for a redundancy check, so the SQL Database has less work to look it up, if the URL is already there. The default value is 10.000 URLs. You can increase that, in case you get fast much URLs into your database. </td>
   </tr>
   <tr>
     <td class="Stil3">http/address</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Your external IP adress is here set. Please lookup your external IP address e.g. here: www.whatismyip.com and enter the value. It works for IPv4, IPv6 and DynDNS entries. </td>
   </tr>
   <tr>
     <td class="Stil3">http/coolingtime</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Coolingtime means, how long the URL synchronisation allows you CPU a pause to cool down. If you have a fast CPU, it should not need much coolingtime. </td>
   </tr>
   <tr>
     <td class="Stil3">http/port</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">The Port of your IP address. For Arado Websearch the default port 29998 is used, but as the transfer of URLs is done over the http-protocol, port 80 or 8080 is appropriate as well, especially if you run Arado Websearch as a Portal or Node on a webserver.</td>
   </tr>
   <tr>
     <td class="Stil3">http/run </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
    <tr>
     <td class="Stil3">http/getask</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
    <tr>
     <td class="Stil3">http/getgrant </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
    <tr>
     <td class="Stil3">http/putallow</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
    <tr>
     <td class="Stil3">http/putoffer </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
   <tr>
     <td class="Stil3">http/upnpenable </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">UPNP helps to connect through a firewalled router. Set it to true, if you want to connect to other devices. </td>
   </tr>
   <tr>
     <td class="Stil3">personal/elvis </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Elvis is the Prefix for each added device. You can rename it to any king name of your country or language. It is just a suggestion to name new devices, you have in any case the option to set the nickname of new added devices.. </td>
   </tr>
   <tr>
     <td class="Stil3">personal/language </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Language defines your ISO language for e.g. the plugin &quot;translate&quot;. It sets the language, in which the webpage of the URL, you are going to browse, should be translated. </td>
   </tr>
   <tr>
     <td class="Stil3">personal/uuid </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">UUID means Unique User IDentification. Each Arado Websearch Device has a unique UUID. You can change it here, but it is not recommended, as other devices then will not recognize you. You get with a new UUID a new Identity within your Arado Websearch Network. </td>
   </tr>
   <tr>
     <td class="Stil3">plugins/dirpath</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Arado Websearch allows to plug in services. Here the path is defined, where you save the plugins. Restart Arado Websearch and the plugins are visible. There are several plugins out e.g. to convert Youtube URLs to MP3 files for free, to translate webpages or post the URL to your favourite social network like Twitter, RetroShare or Facebook, Digg etc. Plugins are third party development and found on several locations and boards on the net. </td>
   </tr>
   <tr>
     <td class="Stil3">proxy/host</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can run Arado Websearch over a proxy. Just set the IP-Address of the proxy here. </td>
   </tr>
   <tr>
     <td class="Stil3">proxy/password</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Set the password of the proxy, in case the proxy needs one. </td>
   </tr>
   <tr>
     <td class="Stil3">proxy/port </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Proxyport defines the port of the proxy. </td>
   </tr>
    <tr>
     <td class="Stil3">proxy/type</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Proxytype defines the type of the proxy. There is http or socks5 mostly used. </td>
   </tr>
    <tr>
     <td class="Stil3">proxy/useproxy</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Useproxy can be set to &quot;true&quot; or &quot;false&quot;. Set it to true, if you want to run Arado Websearch over a proxy, you defined. </td>
   </tr>
    <tr>
     <td class="Stil3">proxy/user </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">In case the proxy reuqests a password, the account or user for this password is defined here. </td>
   </tr>
    <tr>
     <td class="Stil3">rssview/advanced </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Advanced view of RSS can be set to &quot;true&quot; or &quot;false&quot;. If you set it to &quot;true&quot;, the Interface of the RSS-Newsticker-Tab shows two tables, one in the left for your News, one in the right for the Feed-URLs. You can un-check the Edit Box in the Tab as well, to make the right table disappear. </td>
   </tr>
    <tr>
     <td class="Stil3">traffic/maxrandom%1 </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3"><p>Maxrandom defines, how many URLs within one transfer are included. A range of 40 - 80 URLs is appropriate for one chunk to be sent or requested. Random URLs are randomly picked out of the other devices, that means you have a good chance to get old URLs as well and backup that database. </p>     </td>
   </tr>
    <tr>
     <td class="Stil3">traffic/maxrecent%1</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Maxrecent defines, how many URLs within one transfer are included. A range of 40 - 80 URLs is appropriate for one chunk to be sent or requested. Recent URLs are the newest and freshest URLs of the other device, that means you get only the latest incmoing URLs of other devices and stay up to date. </td>
   </tr>
    <tr>
     <td class="Stil3">traffic/urlFrequencyA</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Frequency A defines, how often an IP-Address in the Constant Devices List will be asked for recent or random URLs. As Constant Devices or A-Peers are mostly kown Friends with a good URL database, you can contact them e.g. 30 times per hour, that means each IP is asked for URLs every 2 minutes. </td>
   </tr>
    <tr>
     <td class="Stil3">traffic/urlFrequencyB </td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Frequency B defines, how often an IP-Address in the Remote Devices List will be asked for recent or random URLs. As Remote Devices or B-Peers are mostly kown Friends of Friends with a most probably good URL database, you can contact them e.g. 45 times per hour, that means each IP is asked for URLs every few minutes. </td>
   </tr>
    <tr>
     <td class="Stil3">traffic/urlFrequencyC</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Frequency C defines, how often an IP-Address in the Flexible Devices List will be asked for recent or random URLs. As Flexible Devices or C-Peers are mostly kown as Nodes from the Galaxy with an unknown URL database, you can contact them e.g. 10 times per hour, that means each IP is asked for URLs every six minutes or set it to a slow contact freuency to avoid devices with an non-premium quality standard of URL databases.  </td>
   </tr>
    <tr>
     <td class="Stil3">transfer/addresses</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
   <tr>
     <td class="Stil3">transfer/urls</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">You can set the values true and false. Please set the value to &quot;true&quot;, if you want Arado Websearch networked. </td>
   </tr>
   <tr>
     <td class="Stil3">urldisplay/autorefresh</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Autorefresh = &quot;true&quot; updates the search result list of URL, respective the recent incoming URLs. If you want to look up URLs in the search results without a refresh, then set it to &quot;false&quot;. </td>
   </tr>
   <tr>
     <td class="Stil3">urldisplay/maxshown</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Urldisplay-Maxshown sets the value, how many URLs the recent-button should show. </td>
   </tr>
   <tr>
     <td class="Stil3">urldisplay/refreshperiod</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Refreshperoid defines the time, how fast a Refresh of the URL-Display should be done. </td>
   </tr>
   <tr>
     <td class="Stil3">urldisplay/slowperiod</td>
-    <td class="Stil3">&nbsp;</td>
     <td class="Stil3">Slowperoid defines <span dir="ltr" id=":1jq">the refresh time for the url counter.</span></td>
   </tr>
 </table>
