faq update for Spot-On hybrid path.

--- a/html/settings_faq.html
+++ b/html/settings_faq.html
@@ -44,6 +44,11 @@ This file is usually named <i>ipbase.sql</i>.</td>
     <td class="Stil3">The database file name for all URLs of your Arado Websearch.
  This file is usually named <i>urlbase.sql</i>. The settings value shows you the path, where the urlbase is located. </td>
   </tr>
+<tr>
+    <td class="Stil3">database/shared.db</td>
+    <td class="Stil3">The shared database file makes Arado hyrid with http://spot-on.sf.net.
+ This file is usually named <i>shared.db</i>. The settings value shows you the path, where the shared.db is located. You need to set the same file-path in Spot-On for shared.db. Incoming URLS (not the saved ones) are bridged to Spot-On. With Arado´s RSS Function you can feed both, Arado and Spot-On.</td>
+  </tr>
   <tr>
     <td class="Stil3">engine_peersweep/maxage</td>
     <td class="Stil3">Each device, which connects will be deleted after the maximum age of x days. Default is 9 days. Please run Arado Websearch at least once per Week or better check once per day your RSS News Items in the Newsticker Tab or let it run constantly, so that you show to other devices, you are active. Otherwise they will remove you after the period of maxage not beeing online. </td>
